remove debug logs